working on modal

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_API_KEY=my-secret-api-key
 REACT_APP_UNSPLASH_KEY=JPNH60qkVBHakYVPwABqBTLZXqqn6vpMunfLOvUpexY
+REACT_APP_UNSPLASH_APP_SECRET=s_46Q1_OYlND4Y9ykzsaOJPvlgpVNw5UhT5XAMCbn3k
 REACT_APP_BASE_URI=https://api.unsplash.com
