--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "craco-plugin-scoped-css": "^1.1.0",
     "css-loader": "^5.0.1",
     "history": "^5.0.0",
+    "lodash": "^4.17.20",
     "node-sass": "^4.12.0",
     "react": "^17.0.1",
     "react-content-loader": "^5.1.4",
@@ -18,9 +19,11 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
+    "unsplash-js": "^7.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
